src/components/navigator/NavbarSide.css
.navbar-side {
  width: 15%;
  height: 100vh;
  position: fixed;
  top: 0;
  left: 0;
  padding-top: 80px;
  background-color: #ffffff;
  border-right: 1px solid #0000002e;
  box-shadow: 1px 0px 25px 0px #a4a3a340;
  transition: width 0.3s ease;
}

.navbar-side.collapsed {
  width: 5%;
}

.nav-item {
  display: flex;
  align-items: center;
  padding-inline: 10%;
  margin-block: 10%;
  margin-inline: 20px;
  border-bottom: 1px solid #e6e6e6;
  transition: left 0.3s ease;
}

.nav-item.collapsed {
  display: flex;
  align-items: center;
  padding-inline: 10%;
  margin-block: 40%;
  margin-inline: 20px;
  transition: left 0.3s ease;
  border-bottom: 1px solid transparent;
  width: fit-content;
}

.nav-icon {
  width: 30px;
  padding-right: 15%;
}

.nav-title {
  opacity: 1;
  transition: 0.3s ease;
}

.navbar-side.collapsed .nav-title {
  opacity: 0;
}

.sidebar-thingy {
  position: fixed;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 60px;
  height: 120px;
  top: 161px;
  left: 14%;
  border-radius: 0px 20px 20px 0px;
  background-color: #ffffff;
  border-right: 3px solid #c1c7d0;
  cursor: pointer;
  transition: all 0.3s ease;
}

.navbar-side.collapsed .sidebar-thingy {
  left: 5%;
}

